@@ -1,6 +1,6 @@
 package io.ssafy.mallook.domain.product.dao.mongo;
 
-import io.ssafy.mallook.domain.product.dto.request.ProductHotKeywordDto;
+import io.ssafy.mallook.domain.product.dto.response.ProductImgRes;
 import io.ssafy.mallook.domain.product.dto.response.ProductsDetailDto;
 import io.ssafy.mallook.domain.product.dto.response.ProductsListDto;
 import io.ssafy.mallook.domain.product.dto.response.ProductsPageRes;
@@ -8,6 +8,7 @@ import io.ssafy.mallook.domain.product.entity.Products;
 import io.ssafy.mallook.domain.product.entity.ReviewObject;
 import io.ssafy.mallook.domain.product.entity.Reviews;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
 import org.bson.types.ObjectId;
 import org.springframework.data.domain.*;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -28,14 +29,15 @@ import static org.springframework.data.mongodb.core.aggregation.Aggregation.newA
 
 @Repository
 @RequiredArgsConstructor
+@Log4j2
 public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
 
     private final MongoTemplate mongoTemplate;
-    private final String COLLECTION_NAME = "hiver";
+    private final String COLLECTION_NAME = "products";
 
     @Override
     public ProductsPageRes getProductsListByCategory(ObjectId cursor, Pageable pageable, String mainCategory, String subCategory) {
-        Query query = new Query().addCriteria(Criteria.where("id").lte(cursor))
+        Query query = new Query().addCriteria(Criteria.where("id").gt(cursor))
                 .with(pageable);
 
         if (!isNull(mainCategory)) {
@@ -49,10 +51,9 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
                 .stream()
                 .map(ProductsListDto::toDto)
                 .collect(Collectors.toList());
-        boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber()) * pageable.getPageSize());
+        boolean hasNext = mongoTemplate.count(query, Products.class) >= pageable.getPageSize();
         var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
         productsList.remove(productsList.size() - 1);
-
         return ProductsPageRes.builder()
                 .content(productsList)
                 .nextCursor(nextCursor)
@@ -61,10 +62,10 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
 
     @Override
     public ProductsPageRes findByProductName(String name, String cursor, Pageable pageable) {
-        Query query = new Query().addCriteria(Criteria.where("name").regex(name, "i"));
-
+        Query query = new Query().addCriteria(Criteria.where("name").regex("phone", "i"));
+        log.info(name);
         if (!isNull(cursor) && !cursor.isEmpty()) {
-            query.addCriteria(Criteria.where("id").lt(new ObjectId(cursor)));
+            query.addCriteria(Criteria.where("id").gt(new ObjectId(cursor)));
         }
 
         List<ProductsListDto> productsList = mongoTemplate.find(query, Products.class)
@@ -73,7 +74,10 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
                 .toList();
         boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
         var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
-        productsList.remove(productsList.size() - 1);
+
+        if (productsList.size() > 1) {
+            productsList.remove(productsList.size() - 1);
+        }
         return ProductsPageRes.builder()
                 .content(productsList)
                 .nextCursor(nextCursor)
@@ -81,18 +85,25 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
     }
 
     @Override
-    public ProductsPageRes findByKeywordList(ProductHotKeywordDto hotKeywordDto, String cursor, Pageable pageable) {
-        List<String> keywords = hotKeywordDto.hotKeywordList();
-        Query query = new Query().addCriteria(Criteria.where("keywords").in(keywords));
-
+    public ProductsPageRes findByKeywordList(List<String> keywords, String cursor, Pageable pageable) {
+        Query query = new Query().addCriteria(Criteria.where("keywords").in(keywords)).with(pageable);
+        log.info(keywords);
         if (!isNull(cursor) && !cursor.isEmpty()) {
-            query.addCriteria(Criteria.where("id").lt(new ObjectId(cursor)));
+            query.addCriteria(Criteria.where("id").gt(new ObjectId(cursor)));
         }
 
         List<ProductsListDto> productsList = mongoTemplate.find(query, Products.class)
                 .stream()
                 .map(ProductsListDto::toDto)
-                .toList();
+                .collect(Collectors.toList());
+
+        if (productsList.isEmpty()) {
+            return ProductsPageRes.builder()
+                    .content(List.of())
+                    .nextCursor(null)
+                    .build();
+        }
+
         boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
         var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
         productsList.remove(productsList.size() - 1);
@@ -125,11 +136,12 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
         AggregationOperation sliceOperation = Aggregation.project()
                 .and("reviews.count").as("reviews.count")
                 .and("reviews.average_point").as("reviews.average_point")
-                .and("reviews.reviews").slice(pageable.getPageSize(), (int) (pageable.getOffset())).as("reviews.reviews");
+                .and("reviews.reviews").slice(pageable.getPageSize(), (int) (pageable.getOffset()))
+                .as("reviews.reviews");
         TypedAggregation<Products> aggregation = newAggregation(Products.class, matchOperation, sliceOperation);
         AggregationResults<Products> result = mongoTemplate.aggregate(aggregation, COLLECTION_NAME, Products.class);
-        Reviews reviews = Objects.requireNonNull(result.getUniqueMappedResult()).getReviews();
-        return new PageImpl<>(reviews.getReviews(), pageable, reviews.getCount());
+        Reviews reviews = Objects.requireNonNull(result.getUniqueMappedResult()).getReview();
+        return new PageImpl<>(reviews.getReviewList(), pageable, reviews.getCount());
     }
 
     @Override
@@ -142,5 +154,32 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
                 .map(ProductsListDto::toDto).toList();
 
         return new PageImpl<>(productsList, pageable, maxProducts);
+    }
+
+    @Override
+    public Page<ProductImgRes> getProductImg(Pageable pageable, String mainCategory, String subCategory) {
+        System.out.println(mainCategory);
+        Query query = new Query().addCriteria(Criteria.where("crop").exists(true))
+                .with(pageable);
+        if (!isNull(mainCategory)) {
+            query.addCriteria(Criteria.where("main_category").is(mainCategory));
+        }
+        if (!isNull(subCategory)) {
+            query.addCriteria(Criteria.where("sub_category").is(subCategory));
+        }
+        log.info(query);
+        var result = mongoTemplate.find(query, Products.class);
+        List<ProductImgRes> productsList = result
+                .stream()
+                .map(ProductImgRes::toDto)
+                .toList();
+
+        return new PageImpl<>(productsList, pageable, result.size());
+    }
+
+    @Override
+    public List<Products> findByKeywordsWithLimit(List<String> keywords) {
+        Query query = new Query(Criteria.where("keywords").in(keywords)).limit(5);
+        return mongoTemplate.find(query, Products.class);
     }
 }
